:sparkles: Feat: Terminar o método de cadastro do usuário e iniciar a cifragem e decifragem de senhas e tokens.

--- a/pw3-tarefas/src/main/resources/application.properties
+++ b/pw3-tarefas/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+#https://randomkeygen.com/
+#Pode usar os nomes de preferência para as variáveis do jwt
+jwt.secret=FBq4XjZqliAmwmvzW5GMRhJB26zWSSbY
+jwt.expiration=2m
