--- a/pw3-tarefas/src/main/resources/application.properties
+++ b/pw3-tarefas/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 #Pode usar os nomes de preferência para as variáveis do jwt
 jwt.secret=FBq4XjZqliAmwmvzW5GMRhJB26zWSSbY
 jwt.expiration=2m
+
+server.port=8080
